nodejs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  labels:
    io.kompose.service: nodejs
  name: nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nodejs
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      labels:
        io.kompose.network/app-network: "true"
        io.kompose.service: nodejs
    spec:
      containers:
      - args:
          - ./wait-for.sh
          - db:27017
          - --
          - /home/node/app/node_modules/.bin/nodemon
          - app.js
        image: your_dockerhub_username/node-kubernetes:latest
        imagePullPolicy: IfNotPresent
        name: nodejs
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
status: {}
