nodejs-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: nodejs
  name: nodejs
spec:
  type: LoadBalancer      
  ports:
  - name: "80"
    port: 80
    targetPort: 8080
  selector:
    io.kompose.service: nodejs
status:
  loadBalancer: {}
